# forged

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  dev.sh  pyproject.toml  setup_mcp.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
frontend/: index.html
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Analogy.tsx  AppSidebar.tsx  Architecture.tsx  BenchmarksPage.tsx  BrowserEmbed.tsx  ComparisonCard.tsx  LearningHistory.tsx  LoadingPinwheel.tsx  PhaseIndicator.tsx  PixelBackground.tsx  StepTracker.tsx  Timer.tsx  (+4 more)
src/: api.py  config.py  models.py  orchestrator.py
src/browser/: __init__.py  agent.py  agent_handoff.py  cloud.py  direct_extract.py  handoff.py  rocket.py
src/data/: seed_site_knowledge.json
src/db/: __init__.py  client.py  embeddings.py  setup.py  site_knowledge.py  templates.py  traces.py
src/matching/: __init__.py  action_type.py  domain.py  matcher.py  step_filter.py  verifier.py
src/template/: __init__.py  analyzer.py  extractor.py  generator.py  refiner.py  simplifier.py  validator.py
tests/: test_api.py  test_optimizations.py  test_orchestrator.py
tests/test_browser/: conftest.py  test_agent.py  test_cloud.py  test_handoff.py  test_rocket.py
tests/test_db/: test_confidence.py  test_embeddings.py  test_setup.py  test_templates_integration.py
tests/test_matching/: test_action_type.py  test_domain.py  test_matcher.py
tests/test_template/: fake_traces.py  test_analyzer.py  test_extractor.py  test_generator.py  test_refiner.py  test_simplifier.py  test_validator.py
(+26 files in other folders)
